--- a/super exam.ipynb
+++ b/super exam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "        self.delete_task_button = tk.Button(self.master, text=\"Delete Task\", command=self.delete_last_task)\n",
     "        self.delete_task_button.grid(row=3, column=1, padx=5, pady=5, sticky=\"nsew\")\n",
     "\n",
-    "        self.project_listbox.bind('<<ListboxSelect>>', self.show_project_tasks)\n",
+    "        self.project_listbox.bind('<ButtonRelease-1>', self.show_project_tasks)\n",
     "        self.task_listbox.bind(\"<B1-Motion>\", self.on_drag)\n",
     "        self.task_listbox.bind('<Double-Button-1>', self.on_double_click)\n",
     "\n",
@@ -199,8 +199,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
